Fix SonarQube findings: code quality, null safety, and test hygiene
  ## SonarQube exclusion
  - build.gradle: exclude build/** from SonarQube scan to eliminate ~37 false-positive findings on OpenAPI-generated *Api.java interfaces

  ## Deleted files
  - UserController.java + UserControllerTest.java: removed deprecated controller whose only endpoint (GET /users) is already covered by UsersController; class had a self-documenting TODO to delete it

  ## Code quality (source)
  - Application.java: remove superfluous @ResponseBody on @RestController method (S6837)
  - AuthController.java, ReactionsController.java, UserService.java: remove commented-out code blocks (S125)
  - SessionService.java: extract "User not found" and "Session not found" string literals into private static final constants (S1192)
  - SessionsController.java: extract "token" header name into constant; replace collect(Collectors.toList()) with Stream.toList() (S1192, S6204)
  - SongService.java: replace collect(Collectors.toList()) with toList() on two streams (S6204)
  - UsersController.java: replace collect(Collectors.toList()) with toList() (S6204)
  - SongWebSocketPublisherImpl.java: extract "/topic/sessions/" into TOPIC_PREFIX constant (S1192)

  ## Null safety and deprecated API (S2259, S1874, S1193)
  - LyricsService.java:
    - Null-check ResponseEntity.getBody() before field access
    - Replace deprecated asText(null) with textValue() on JsonNode
    - Split multi-type catch into separate catch clauses to remove instanceof check inside catch block (S1193)
  - SpotifyService.java:
    - Null-check getBody() in fetchToken() and doSearch() before accessing JSON fields
    - Replace deprecated asText() with textValue() on all JsonNode field accesses

  ## Test hygiene
  - Remove public modifier from test classes and methods across AuthControllerTest, DTOMapperTest, UserRepositoryIntegrationTest, UserServiceIntegrationTest, UserServiceTest (S5786 — unnecessary in JUnit 5)
  - SessionsControlle